# folktexts

./: .buildinfo  .gitignore  CITATION.cff  DATASET_CARD.md  LICENSE  MANIFEST.in  README.md  REBASE_VERIFICATION.md  acsincome_exp.py  acsincome_exp_race.py  acspubcov_exp.py  acsunemployment_exp.py  acsunemployment_exp_race.py  benchmark_metrics.csv  benchmark_metrics_synth.csv  configuring_prompts.html  diabetic_data_exp.py  diabetic_data_masking_exp.py  download_llms.sub  genindex.html  index.html  ipums_exp.py  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  risk_score_correlator.py  run_synth_exps.sh  run_zero_shot_exps.sh  search.html  searchindex.js  sepsis_exp.py  ucibreastcancer.py  ucidiabetes.py  uciheart.py  ucistatloggerman.py  updates.html
.doctrees/: configuring_prompts.doctree  environment.pickle  index.doctree  notebooks.doctree  readme.doctree  updates.doctree
_modules/: index.html
_sources/: index.rst.txt  notebooks.rst.txt  updates.md.txt
benchmarking_scripts/: xgb_benchmarking.py  xgb_benchmarking_synth.py
divergences/: 01_llama3_numeric_multidigit.md  02_qwen3_chatmcq_tf_collapse.md  03_qwen3_thinking_max_tokens.md  README.md
docs/: conf.py  configuring_prompts.md  index.rst  notebooks.rst  updates.md
folktexts/: __init__.py  _commons.py  _io.py  _utils.py  _version.py  benchmark.py  classifier.py  col_to_text.py  dataset.py  datasets.py  decoding.py  evaluation.py  llm_utils.py  plotting.py  prompting.py  qa_interface.py  querying.py  questions.py  task.py  threshold.py
notebooks/: README.html  README.md  configuring-prompts-example.html  configuring-prompts-example.ipynb  custom-acs-task-example.html  custom-acs-task-example.ipynb  custom-dataset-example.html  custom-dataset-example.ipynb  detailed-example.html  detailed-example.ipynb  experiments.ipynb  minimal-demo_gpt-4o-mini.html  minimal-demo_gpt-4o-mini.ipynb  minimal-demo_gpt-5-mini.html  minimal-demo_gpt-5-mini.ipynb  minimal-example.html  minimal-example.ipynb  minimal-example_web-API-model.html  minimal-example_web-API-model.ipynb  paper-plots-and-tables.html  paper-plots-and-tables.ipynb  parse-acs-results.html  parse-acs-results.ipynb  parse-acs-results_using-feature-subsets.html  parse-acs-results_using-feature-subsets.ipynb  parse-feature-importance-results.html  parse-feature-importance-results.ipynb  parse-results.ipynb  run-acs-benchmark.ipynb  run-benchmark.html  run-benchmark.ipynb  utils.py
requirements/: apis.txt  cli.txt  cluster.txt  docs.txt  main.txt  tests.txt  vllm.txt
results/: PR27_validation_report.md  VALIDATION_STATUS.md  aggregated-results.2024-08.csv  aggregated-results.csv  baseline-results.GBM.LR.XGBoost.csv  baseline-results.csv  feature-importance.csv
scripts/: ab_prompt_strategy.py  audit_reasoning_failures.py  build_postfix_comparison_table.py  compare_backends.py  compare_postfix.py  compare_table1_backends.py  debug_llama3_numeric_divergence.py  debug_llama3_numeric_v2.py  extended_sweep.py  inspect_e2e_prompts.py  inspect_prompt_tail.py  multi_seed_stability.py  phase6_chat_extension.py  phase7_edge_cases.py  phase7_overcap.py  probe_instruct_chat.py  probe_prompt_suffixes.py  probe_prompt_suffixes_v2.py  reasoning_sweep.py  reproduce_table1.py  test_gemma_branch.py  test_reasoning_qa.py  validation_summary.py
source/: folktexts.acs.html  folktexts.classifier.html  (+3 more)
(+130 files in other folders)
